--- a/src/app/home/app.component.html
+++ b/src/app/home/app.component.html
@@ -112,6 +112,8 @@
             <button [disabled]="form.invalid">Оформить заказ</button>
           </form>
         </div>
+
+        <img src="../../assets/icon/pizzzzza_660.png" alt="" />
       </div>
     </div>
   </div>
