--- a/docs/app/home/app.component.html
+++ b/docs/app/home/app.component.html
@@ -9,7 +9,7 @@
           <div class="header2">только в Pizza Cheff</div>
           <div class="row">
             <div class="inf">
-              <img src="../../assets/icon/img1.png" alt="" />
+              <img src="docs/assets/icon/img1.png" alt="" />
               <div>
                 <div class="header">ЛУЧШЕЕ ТЕСТО</div>
                 <div class="text">
