--- a/docs/app/home/app.component.html
+++ b/docs/app/home/app.component.html
@@ -9,7 +9,9 @@
           <div class="header2">только в Pizza Cheff</div>
           <div class="row">
             <div class="inf">
-              <img src="docs/assets/icon/img1.png" alt="" />
+              <img
+                src="https://matykinaanna.github.io/test_Itlogia/assets/icon/img1.png"
+                alt="" />
               <div>
                 <div class="header">ЛУЧШЕЕ ТЕСТО</div>
                 <div class="text">
@@ -19,7 +21,9 @@
               </div>
             </div>
             <div class="inf">
-              <img src="../../assets/icon/img2.png" alt="" />
+              <img
+                src="https://matykinaanna.github.io/test_Itlogia/app/assets/icon/img2.png"
+                alt="" />
               <div>
                 <div class="header">ЛУЧШИЕ ПОВОРА</div>
                 <div class="text">
@@ -30,7 +34,9 @@
           </div>
           <div class="row">
             <div class="inf">
-              <img src="../../assets/icon/img3.png" alt="" />
+              <img
+                src="https://matykinaanna.github.io/test_Itlogia/app/assets/icon/img3.png"
+                alt="" />
               <div>
                 <div class="header">ГАРАНТИЯ КАЧЕСТВА</div>
                 <div class="text">
@@ -40,7 +46,9 @@
               </div>
             </div>
             <div class="inf">
-              <img src="../../assets/icon/img4.png" alt="" />
+              <img
+                src="https://matykinaanna.github.io/test_Itlogia/app/assets/icon/img4.png"
+                alt="" />
               <div>
                 <div class="header">ОТБОРНЫЕ РЕЦЕПТЫ</div>
                 <div class="text">
@@ -51,7 +59,9 @@
           </div>
         </div>
         <div class="image">
-          <img src="../../assets/icon/pizza.png" alt="" />
+          <img
+            src="https://matykinaanna.github.io/test_Itlogia/app/assets/icon/pizza.png"
+            alt="" />
         </div>
       </div>
       <button class="btn-firstBlock">Выбрать пиццу</button>
@@ -113,10 +123,10 @@
           </form>
         </div>
 
-        <img src="../../assets/icon/pizzzzza_660.png" alt="" />
+        <img
+          src="https://matykinaanna.github.io/test_Itlogia/app/assets/icon/pizzzzza_660.png"
+          alt="" />
       </div>
-
-      <button ng-click="openDialog()">Открыть попап</button>
     </div>
   </div>
 </div>
