--- a/docs/app/home/app.component.html
+++ b/docs/app/home/app.component.html
@@ -129,4 +129,7 @@
       </div>
     </div>
   </div>
+  <div class="popup" [ngClass]="currentClasses" (click)="click()">
+    <AppModulePopUp></AppModulePopUp>
+  </div>
 </div>
