--- a/docs/app/home/app.component.css
+++ b/docs/app/home/app.component.css
@@ -2,6 +2,15 @@
   position: fixed;
 }
 
+.border {
+  width: 100%;
+  position: absolute;
+  border-bottom: rgb(152, 152, 152, 0.2) solid 1px;
+  height: 1px;
+  left: 0px;
+  top: 115px;
+}
+
 .none {
   display: none;
   overflow: hidden;
