--- a/docs/app/home/app.component.html
+++ b/docs/app/home/app.component.html
@@ -2,6 +2,8 @@
   <div class="wrapper">
     <header></header>
 
+    <div class="border"></div>
+
     <div class="container">
       <div class="firstBlock">
         <div class="inform">
