--- a/docs/app/home/app.component.css
+++ b/docs/app/home/app.component.css
@@ -5,10 +5,10 @@
 .border {
   width: 100%;
   position: absolute;
-  border-bottom: rgb(152, 152, 152, 0.2) solid 1px;
-  height: 1px;
+  height: 5px;
   left: 0px;
   top: 115px;
+  box-shadow: 0px 3px 14px 1px rgba(152, 152, 152, 0.2);
 }
 
 .none {
